RESOLVED FIXED44816
Crash in InlineBox::root() under RenderTextControl::textWithHardLineBreaks()
https://bugs.webkit.org/show_bug.cgi?id=44816
Summary Crash in InlineBox::root() under RenderTextControl::textWithHardLineBreaks()
mitz
Reported 2010-08-28 00:17:26 PDT
<rdar://problem/7275077> Patch forthcoming.
Attachments
Speculative fix (2.54 KB, patch)
2010-08-28 01:58 PDT, mitz
simon.fraser: review+
mitz
Comment 1 2010-08-28 01:58:35 PDT
Created attachment 65815 [details] Speculative fix
Simon Fraser (smfr)
Comment 2 2010-08-28 09:07:28 PDT
Comment on attachment 65815 [details] Speculative fix r=me
Eric Seidel (no email)
Comment 3 2010-10-13 12:27:04 PDT
Attachment 65815 [details] was posted by a committer and has review+, assigning to Dan Bernstein for commit.
mitz
Comment 4 2010-10-13 14:24:38 PDT
Note You need to log in before you can comment on or make changes to this bug.