Speculative fix for <rdar://problem/7275077> Crash in InlineBox::root() under RenderTextControl::textWithHardLineBreaks() https://bugs.webkit.org/show_bug.cgi?id=44816

Reviewed by Simon Fraser.

No test because I could not reproduce the crash.

In a common variant of the crash, InlineBox::root() is called with this == 12. This suggests that
a RenderInline* was cast into a RenderBox*, so RenderBox::inlineBoxWrapper() interpreted the
m_lineHeight and m_verticalPosition members of a RenderInline as a pointer to an InlineBox.

The cast into RenderBox* in textWithHardLineBreaks() was introduced in r40881 with no exaplanation.

* rendering/RenderTextControl.cpp:
(WebCore::RenderTextControl::textWithHardLineBreaks): Fetch the first line directly from the inner
text block instead of relying on the first child being a text node.



Canonical link: https://commits.webkit.org/57076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66309 268f45cc-cd09-0410-ab3c-d52691b4dbfc